# DAT

./: README.md  ex2.hs  ex3.hs  test.hs
dat-2023p/prj/.stack-work/: stack.sqlite3
doc/: index.html  style-4.css
doc/haddock/: doc-index.html  index.html
doc/haddock/all/: doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-47.html  doc-index-58.html  doc-index-61.html  doc-index-94.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  index.html
doc/haddock/binary-0.8.8.0/: Data-Binary-Builder.html  Data-Binary-Get-Internal.html  Data-Binary-Get.html  Data-Binary-Put.html  Data-Binary.html
doc/haddock/drawing-0.2.2.0/: Drawing-IO.html  Drawing-Vector.html  doc-index.html  (+4 more)
doc/prac-intro-web/: index.html
doc/prac-prog-fun/: index.html
prj/: stack.yaml
prj/.stack-work/: stack.sqlite3
prj/dabloing/: ex1.hs  ex2.hs  ex3.hs
prj/drawing/: drawing.cabal
prj/drawing/src/: Drawing.hs
prj/drawing/src/Drawing/: IO.hs
prj/drawing/src/Drawing/Internal/: Handler.hs  Render.hs  Types.hs  Types.hs-old
prj/prac-forums/: forums.db  prac-forums.cabal
prj/prac-forums/haskell/: App.hs  AuthHandler.hs  Config.hs  Db.hs  Found.hs  Handler.hs  Main.hs  Model.hs  View.hs
prj/prac-forums/sqlite/: forums-data.sql  schema.sql  users-data.sql
prj/prac-forums/templates/: default-layout.html  forum.html  home.html  post.html  topic.html  user.html
prj/prac-intro-web/: CalcApp.hs  CalcInstr.hs  Game.hs  Handler.hs  Handler_T1.hs  Handler_T2.hs  calcMain.hs  hello-1.hs  hello-2.hs  prac-intro-web.cabal
prj/prac-prog-fun/: prac-prog-fun.cabal
prj/prac-prog-fun/part0/: ex1.hs  ex2.hs  ex3.hs  parcial.hs
prj/prac-prog-fun/part1/: ex2.hs  ex3.hs  ex4a.hs  ex4b.hs  ex5.hs  ex6.hs  example.hs
prj/prac-prog-fun/part2/: exemple.hs  life-1.hs  life-2.hs  life-3.hs  life-4.hs  life-5.hs
prj/prac-prog-fun/part2/Life/: Draw.hs
(+177 files in other folders)
