
cabal-version: 1.12

name:           prac-prog-fun
version:        0.0.0.1
author:         Jordi Forga Alberich
build-type:     Simple

library
  build-depends:
      aeson
    , base >=4.7 && <5
    , containers
    , drawing >=0.2
    , text
    , wai >=3.0
    , warp
  default-language: Haskell2010
